[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Nick"]
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Tree-sitter core and language grammars
tree-sitter = "0.26"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-cpp = "0.23"

# Graph database
falkordb = { version = "0.1", features = ["tokio"] }

# Parallelism
rayon = "1.10"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# File walking (respects .gitignore)
ignore = "0.4"

# Git integration
git2 = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime (for FalkorDB)
tokio = { version = "1.43", features = ["full"] }

# Hashing
sha2 = "0.10"
hex = "0.4"

# Internal crates
kampus-core = { path = "crates/kampus-core" }
