[package]
name = "kampus-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for Kampus code indexing tool"

[[bin]]
name = "kampus"
path = "src/main.rs"

[dependencies]
kampus-core.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async
tokio.workspace = true

# Serialization (for output formatting)
serde.workspace = true
serde_json.workspace = true

# CPU detection
num_cpus = "1.16"

# Graph database (for direct access in commands)
falkordb.workspace = true
