[package]
name = "kampus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Kampus code indexing tool"

[dependencies]
# Tree-sitter
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-cpp.workspace = true

# Graph database
falkordb.workspace = true

# Parallelism
rayon.workspace = true

# File walking
ignore.workspace = true

# Git
git2.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true

# Async
tokio.workspace = true

# Hashing
sha2.workspace = true
hex.workspace = true

# CPU detection
num_cpus = "1.16"

[dev-dependencies]
tempfile = "3.14"
